Fix BXEGS-1157 "Mobile Devices: Personal Information and Direct Deposit background slides up behind dialog"

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1867,16 +1867,6 @@ div.dir-profile {
     }
 }
 
-/* Catches mobile devices up through iPhone X landscape */
-@media screen and (max-width:812px) {
-    /* Fix iPhone-only issue where background scrolls when user touches an <input> element to scroll */
-    body.modal-open {
-        overflow: hidden;
-        position:fixed;
-        width: 100%;
-    }
-}
-
 @media screen and (min-width:768px) {
     .col-md-6 {
         float: left;
@@ -2034,3 +2024,14 @@ div.dir-profile {
         width: 97%;
     }
 }
+
+/* Catches mobile devices up through iPad landscape */
+@media screen and (max-width:1024px) {
+    /* Fix iOS-only issue where background scrolls when user touches an <input> element to scroll */
+    body.modal-open {
+        overflow: hidden;
+        position:fixed;
+        width: 100%;
+    }
+}
+
